# STT-Twitch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
libs/: README.md
src/: STT.py  twitch.py
