[project]
name = "final-setup-of-stt-twitch-app"
version = "0.1.0"
description = "Speech-to-Text application integrated with Twitch chat using faster-whisper."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.4.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
]
